--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "@heroicons/react": "^1.0.6",
     "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "firebase": "^9.7.0",
@@ -48,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.1.1"
   }
 }
